cert-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: echo-ingress
  namespace: default
  selfLink: /apis/extensions/v1beta1/namespaces/default/ingresses/echo-ingress
  uid: 94860fb9-7d5e-4c44-90a9-28897d1e4bda
  resourceVersion: '6946'
  
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod 
      
spec:
  tls:
    - hosts:
      - echo1.newgrad.dev
      - echo2.newgrad.dev
      secretName: letsencrypt-prod
  rules:
    - host: echo1.newgrad.dev
      http:
        paths:
          - backend:
              serviceName: echo1
              servicePort: 80
